# pkg/api/v1/openapi_generated.go
@@ -679,6 +679,12 @@ func schema_kubevirt_pkg_api_v1_DomainSpec(ref common.ReferenceCallback) common.
 							Format:      "",
 						},
 					},
+					"bootloader": {
+						SchemaProps: spec.SchemaProps{
+							Type:   []string{"string"},
+							Format: "",
+						},
+					},
 				},
 				Required: []string{"devices"},
 			},
