# pkg/api/v1/schema.go
@@ -32,6 +32,13 @@ const (
 	IOThreadsPolicyAuto   IOThreadsPolicy = "auto"
 )
 
+type Bootloader string
+
+const (
+	BootloaderBIOS Bootloader = "bios"
+	BootloaderEFI  Bootloader = "efi"
+)
+
 //go:generate swagger-doc
 //go:generate openapi-gen -i . --output-package=kubevirt.io/kubevirt/pkg/api/v1  --go-header-file ../../../hack/boilerplate/boilerplate.go.txt
 
@@ -132,6 +139,7 @@ type DomainSpec struct {
 	// One of: shared, auto
 	// +optional
 	IOThreadsPolicy *IOThreadsPolicy `json:"ioThreadsPolicy,omitempty"`
+	Bootloader      *Bootloader      `json:"bootloader,omitempty"`
 }
 
 // ---
